Undo CMakeLists.txt whitespace-only changes Remove cmake options where we like the defaults Add libdl and libz to static MinGW build to support WITH_PLUGINS and WITH_ZLIB

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,70 +1,70 @@
 set(LIBVER 1)
 
 set(
-  sources
-  crc32c.c
-  rdaddr.c
-  rdavl.c
-  rdbuf.c
-  rdcrc32.c
-  rdfnv1a.c
-  rdkafka.c
-  rdkafka_assignor.c
-  rdkafka_broker.c
-  rdkafka_buf.c
-  rdkafka_cgrp.c
-  rdkafka_conf.c
-  rdkafka_event.c
-  rdkafka_feature.c
-  rdkafka_lz4.c
-  rdkafka_metadata.c
-  rdkafka_metadata_cache.c
-  rdkafka_msg.c
-  rdkafka_msgset_reader.c
-  rdkafka_msgset_writer.c
-  rdkafka_offset.c
-  rdkafka_op.c
-  rdkafka_partition.c
-  rdkafka_pattern.c
-  rdkafka_queue.c
-  rdkafka_range_assignor.c
-  rdkafka_request.c
-  rdkafka_roundrobin_assignor.c
-  rdkafka_sasl.c
-  rdkafka_sasl_plain.c
-  rdkafka_sticky_assignor.c
-  rdkafka_subscription.c
-  rdkafka_assignment.c
-  rdkafka_timer.c
-  rdkafka_topic.c
-  rdkafka_transport.c
-  rdkafka_interceptor.c
-  rdkafka_header.c
-  rdkafka_admin.c
-  rdkafka_aux.c
-  rdkafka_background.c
-  rdkafka_idempotence.c
-  rdkafka_txnmgr.c
-  rdkafka_cert.c
-  rdkafka_coord.c
-  rdkafka_mock.c
-  rdkafka_mock_handlers.c
-  rdkafka_mock_cgrp.c
-  rdkafka_error.c
-  rdlist.c
-  rdlog.c
-  rdmurmur2.c
-  rdports.c
-  rdrand.c
-  rdregex.c
-  rdstring.c
-  rdunittest.c
-  rdvarint.c
-  rdmap.c
-  snappy.c
-  tinycthread.c
-  tinycthread_extra.c
-  rdxxhash.c
+    sources
+    crc32c.c
+    rdaddr.c
+    rdavl.c
+    rdbuf.c
+    rdcrc32.c
+    rdfnv1a.c
+    rdkafka.c
+    rdkafka_assignor.c
+    rdkafka_broker.c
+    rdkafka_buf.c
+    rdkafka_cgrp.c
+    rdkafka_conf.c
+    rdkafka_event.c
+    rdkafka_feature.c
+    rdkafka_lz4.c
+    rdkafka_metadata.c
+    rdkafka_metadata_cache.c
+    rdkafka_msg.c
+    rdkafka_msgset_reader.c
+    rdkafka_msgset_writer.c
+    rdkafka_offset.c
+    rdkafka_op.c
+    rdkafka_partition.c
+    rdkafka_pattern.c
+    rdkafka_queue.c
+    rdkafka_range_assignor.c
+    rdkafka_request.c
+    rdkafka_roundrobin_assignor.c
+    rdkafka_sasl.c
+    rdkafka_sasl_plain.c
+    rdkafka_sticky_assignor.c
+    rdkafka_subscription.c
+    rdkafka_assignment.c
+    rdkafka_timer.c
+    rdkafka_topic.c
+    rdkafka_transport.c
+    rdkafka_interceptor.c
+    rdkafka_header.c
+    rdkafka_admin.c
+    rdkafka_aux.c
+    rdkafka_background.c
+    rdkafka_idempotence.c
+    rdkafka_txnmgr.c
+    rdkafka_cert.c
+    rdkafka_coord.c
+    rdkafka_mock.c
+    rdkafka_mock_handlers.c
+    rdkafka_mock_cgrp.c
+    rdkafka_error.c
+    rdlist.c
+    rdlog.c
+    rdmurmur2.c
+    rdports.c
+    rdrand.c
+    rdregex.c
+    rdstring.c
+    rdunittest.c
+    rdvarint.c
+    rdmap.c
+    snappy.c
+    tinycthread.c
+    tinycthread_extra.c
+    rdxxhash.c
 )
 
 if(WITH_SSL)
@@ -121,37 +121,31 @@ if(WITHOUT_WIN32_CONFIG)
   else()
     list(APPEND rdkafka_compile_definitions WITH_SSL=0)
   endif(WITH_SSL)
-
   if(WITH_ZLIB)
     list(APPEND rdkafka_compile_definitions WITH_ZLIB=1)
   else()
     list(APPEND rdkafka_compile_definitions WITH_ZLIB=0)
   endif(WITH_ZLIB)
-
   if(WITH_SNAPPY)
     list(APPEND rdkafka_compile_definitions WITH_SNAPPY=1)
   else()
     list(APPEND rdkafka_compile_definitions WITH_SNAPPY=0)
   endif(WITH_SNAPPY)
-
   if(WITH_ZSTD)
     list(APPEND rdkafka_compile_definitions WITH_ZSTD=1)
   else()
     list(APPEND rdkafka_compile_definitions WITH_ZSTD=0)
   endif(WITH_ZSTD)
-
   if(WITH_SASL_SCRAM)
     list(APPEND rdkafka_compile_definitions WITH_SASL_SCRAM=1)
   else()
     list(APPEND rdkafka_compile_definitions WITH_SASL_SCRAM=0)
   endif(WITH_SASL_SCRAM)
-
   if(WITH_SASL_OAUTHBEARER)
     list(APPEND rdkafka_compile_definitions WITH_SASL_OAUTHBEARER=1)
   else()
     list(APPEND rdkafka_compile_definitions WITH_SASL_OAUTHBEARER=0)
   endif(WITH_SASL_OAUTHBEARER)
-
   if(ENABLE_DEVEL)
     list(APPEND rdkafka_compile_definitions ENABLE_DEVEL=1)
   else()
@@ -223,7 +217,6 @@ if(WITH_SSL)
     if(NOT TARGET bundled-ssl)
       message(FATAL_ERROR "bundled-ssl target not exist")
     endif()
-
     target_include_directories(rdkafka BEFORE PUBLIC ${BUNDLED_SSL_INCLUDE_DIR})
     target_link_libraries(rdkafka PUBLIC ${BUNDLED_SSL_LIBRARIES})
     add_dependencies(rdkafka bundled-ssl)
@@ -338,16 +331,15 @@ else()
 endif()
 
 install(
-  TARGETS rdkafka
-  EXPORT "${targets_export_name}"
-  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
-  INCLUDES
-  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    TARGETS rdkafka
+    EXPORT "${targets_export_name}"
+    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
 install(
-  FILES "rdkafka.h" "rdkafka_mock.h"
-  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/librdkafka"
+    FILES "rdkafka.h" "rdkafka_mock.h"
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/librdkafka"
 )
