--- a/tests/interceptor_test/CMakeLists.txt
+++ b/tests/interceptor_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(
-  sources
-  interceptor_test.c
+    sources
+    interceptor_test.c
 )
 
 add_library(interceptor_test SHARED ${sources})
@@ -11,7 +11,5 @@ target_link_libraries(interceptor_test PUBLIC rdkafka)
 
 # Remove "lib" prefix
 set_target_properties(interceptor_test PROPERTIES PREFIX "")
-set_target_properties(
-  interceptor_test PROPERTIES
-  LIBRARY_OUTPUT_DIRECTORY ${tests_OUTPUT_DIRECTORY}/interceptor_test/
-)
+set_target_properties(interceptor_test PROPERTIES
+                      LIBRARY_OUTPUT_DIRECTORY ${tests_OUTPUT_DIRECTORY}/interceptor_test/)
