--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -1,19 +1,19 @@
 set(LIBVER 1)
 
 set(
-  sources
-  ConfImpl.cpp
-  ConsumerImpl.cpp
-  HandleImpl.cpp
-  HeadersImpl.cpp
-  KafkaConsumerImpl.cpp
-  MessageImpl.cpp
-  MetadataImpl.cpp
-  ProducerImpl.cpp
-  QueueImpl.cpp
-  RdKafka.cpp
-  TopicImpl.cpp
-  TopicPartitionImpl.cpp
+    sources
+    ConfImpl.cpp
+    ConsumerImpl.cpp
+    HandleImpl.cpp
+    HeadersImpl.cpp
+    KafkaConsumerImpl.cpp
+    MessageImpl.cpp
+    MetadataImpl.cpp
+    ProducerImpl.cpp
+    QueueImpl.cpp
+    RdKafka.cpp
+    TopicImpl.cpp
+    TopicPartitionImpl.cpp
 )
 
 if(RDKAFKA_BUILD_STATIC)
@@ -33,7 +33,7 @@ target_link_libraries(rdkafka++ PUBLIC rdkafka)
 # Support '#include <rdkafcpp.h>'
 target_include_directories(rdkafka++ PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>")
 if(NOT RDKAFKA_BUILD_STATIC)
-  target_compile_definitions(rdkafka++ PRIVATE LIBRDKAFKACPP_EXPORTS)
+    target_compile_definitions(rdkafka++ PRIVATE LIBRDKAFKACPP_EXPORTS)
 endif()
 
 # Generate pkg-config file
@@ -76,16 +76,15 @@ else()
 endif()
 
 install(
-  TARGETS rdkafka++
-  EXPORT "${targets_export_name}"
-  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
-  INCLUDES
-  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    TARGETS rdkafka++
+    EXPORT "${targets_export_name}"
+    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
+    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
 install(
-  FILES "rdkafkacpp.h"
-  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/librdkafka"
+    FILES "rdkafkacpp.h"
+    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/librdkafka"
 )
