Default WITH_PLUGINS to ON on Windows CMake builds Remove libdl from MinGW build Fix typo when WITHOUT_WIN32_CONFIG is ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ endif()
 # }
 
 # WITH_PLUGINS {
-if(WITH_LIBDL)
+if(WITH_LIBDL OR WIN32)
   set(with_plugins_default ON)
 else()
   set(with_plugins_default OFF)
