--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,9 +152,9 @@ if(WITHOUT_WIN32_CONFIG)
     list(APPEND rdkafka_compile_definitions ENABLE_DEVEL=0)
   endif(ENABLE_DEVEL)
   if(WITH_PLUGINS)
-    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=1)
+    list(APPEND rdkafka_compile_definitions WITH_PLUGINS=1)
   else()
-    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=0)
+    list(APPEND rdkafka_compile_definitions WITH_PLUGINS=0)
   endif(WITH_PLUGINS)
 endif()
 
