--- a/src-cpp/CMakeLists.txt
+++ b/src-cpp/CMakeLists.txt
@@ -19,23 +19,27 @@ set(
 set(CMAKE_DEBUG_POSTFIX d)
 
 add_library(rdkafka++ SHARED ${sources})
-add_library(rdkafka++_static STATIC ${sources})
-
 set_property(TARGET rdkafka++ PROPERTY SOVERSION ${LIBVER})
 target_compile_definitions(rdkafka++ PRIVATE LIBRDKAFKACPP_EXPORTS)
-target_compile_definitions(rdkafka++_static PUBLIC LIBRDKAFKACPP_STATICLIB)
-
-set_target_properties(rdkafka++_static
-    PROPERTIES COMPILE_PDB_NAME rdkafka++_static)
-set_target_properties(rdkafka++_static
-    PROPERTIES COMPILE_PDB_NAME_DEBUG rdkafka++_static${CMAKE_DEBUG_POSTFIX})
-
 target_link_libraries(rdkafka++ PUBLIC rdkafka)
-target_link_libraries(rdkafka++_static PUBLIC rdkafka_static)
+
+if(RDKAFKA_BUILD_STATIC)
+
+  add_library(rdkafka++_static STATIC ${sources})
+  set_target_properties(rdkafka++_static
+      PROPERTIES COMPILE_PDB_NAME rdkafka++_static)
+  set_target_properties(rdkafka++_static
+      PROPERTIES COMPILE_PDB_NAME_DEBUG rdkafka++_static${CMAKE_DEBUG_POSTFIX})
+  target_compile_definitions(rdkafka++_static PUBLIC LIBRDKAFKACPP_STATICLIB)
+  target_link_libraries(rdkafka++_static PUBLIC rdkafka_static)
+
+endif()
 
 foreach(target rdkafka++ rdkafka++_static)
-    # Support '#include <rdkafcpp.h>'
-    target_include_directories(${target} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>")
+    if (TARGET ${target})
+      # Support '#include <rdkafcpp.h>'
+      target_include_directories(${target} PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>")
+    endif()
 endforeach()
 
 # Generate pkg-config file
@@ -66,9 +70,30 @@ configure_file(
 install(FILES ${GENERATED_DIR}/rdkafka++.pc
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
 )
+if(RDKAFKA_BUILD_STATIC)
+  set(PKG_CONFIG_NAME
+    "librdkafka++-static"
+  )
+  set(PKG_CONFIG_DESCRIPTION
+    "The Apache Kafka C/C++ library (static)"
+  )
+  set(PKG_CONFIG_REQUIRES "rdkafka_static")
+  set(PKG_CONFIG_LIBS
+    "-L\${libdir} \${libdir}/librdkafka++_static.a"
+  )
+  configure_file(
+    "../packaging/cmake/rdkafka.pc.in"
+    "${GENERATED_DIR}/rdkafka++-static.pc"
+    @ONLY
+  )
+  install(FILES ${GENERATED_DIR}/rdkafka++-static.pc
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
+  )
+  set(static_target_for_install rdkafka++_static)
+endif()
 
 install(
-    TARGETS rdkafka++ rdkafka++_static
+    TARGETS rdkafka++ ${static_target_for_install}
     EXPORT "${targets_export_name}"
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
@@ -76,11 +101,13 @@ install(
     INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
-if (MSVC)
-    set_target_properties(rdkafka++_static
-        PROPERTIES
-        COMPILE_PDB_NAME_RELWITHDEBINFO rdkafka++_static
-        COMPILE_PDB_NAME_DEBUG          rdkafka++_static${CMAKE_DEBUG_POSTFIX})
+if(TARGET rdkafka++_static)
+  if (MSVC)
+      set_target_properties(rdkafka++_static
+          PROPERTIES
+          COMPILE_PDB_NAME_RELWITHDEBINFO rdkafka++_static
+          COMPILE_PDB_NAME_DEBUG          rdkafka++_static${CMAKE_DEBUG_POSTFIX})
+  endif()
 endif()
 
 install(
@@ -92,7 +119,10 @@ if (MSVC)
     install(FILES $<TARGET_PDB_FILE:rdkafka++>
         DESTINATION ${CMAKE_INSTALL_BINDIR}
         CONFIGURATIONS Debug RelWithDebInfo)
-    install(FILES $<TARGET_FILE_DIR:rdkafka++_static>/$<TARGET_FILE_BASE_NAME:rdkafka++_static>.pdb
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        CONFIGURATIONS Debug RelWithDebInfo)
+    if(TARGET rdkafka++_static)
+      install(FILES $<TARGET_FILE_DIR:rdkafka++_static>/$<TARGET_FILE_BASE_NAME:rdkafka++_static>.pdb
+          DESTINATION ${CMAKE_INSTALL_LIBDIR}
+          CONFIGURATIONS Debug RelWithDebInfo)
+    endif()
 endif()
+
