Fix roundrobin assignor for asymmetrical subscriptions (#3159)
The roundrobin partition assignment strategy could get stuck in an
endless loop or generate uneven assignments in case the group members
had asymmetric subscriptions (e.g., c1 subscribes to t1,t2 while c2
subscribes to t2,t3).

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -111,6 +111,7 @@ set(
     0117-mock_errors.c
     0118-commit_rebalance.c
     0119-consumer_auth.cpp
+    0120-asymmetric_subscription.c
     8000-idle.cpp
     test.c
     testcpp.cpp
