KIP-447: Scalability improvements for transactional producer

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -50,6 +50,10 @@ transactions: ../src/librdkafka.a transactions.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
 
+transactions-older-broker.c: ../src/librdkafka.a transactions-older-broker.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
+		../src/librdkafka.a $(LIBS)
+
 delete_records: ../src/librdkafka.a delete_records.c
 	$(CC) $(CPPFLAGS) $(CFLAGS) $@.c -o $@ $(LDFLAGS) \
 		../src/librdkafka.a $(LIBS)
