--- a/mklove/Makefile.base
+++ b/mklove/Makefile.base
@@ -123,16 +123,18 @@ ifeq ($(WITH_STRIP),y)
 endif
 
 ifeq ($(MKL_NO_SELFCONTAINED_STATIC_LIB),y)
+_STATIC_FILENAME=$(LIBNAME).a
 $(LIBNAME)-static.a:
-else ifneq ($(WITH_STATIC_LINKING),y)
-$(LIBNAME)-static.a:
-else
-$(LIBNAME)-static.a: $(LIBNAME).a
+
+else # MKL_NO_SELFCONTAINED_STATIC_LIB
+
 ifneq ($(MKL_STATIC_LIBS),)
+_STATIC_FILENAME=$(LIBNAME)-static.a
+$(LIBNAME)-static.a: $(LIBNAME).a
 	@printf "$(MKL_YELLOW)Creating self-contained static library $@$(MKL_CLR_RESET)\n"
 ifeq ($(HAS_LIBTOOL_STATIC),y)
 	$(LIBTOOL) -static -o $@ - $(LIBNAME).a $(MKL_STATIC_LIBS)
-else
+else # HAS_LIBTOOL_STATIC
 	(_tmp=$$(mktemp arstaticXXXXXX) ; \
 	echo "CREATE $@" > $$_tmp ; \
 	for _f in $(LIBNAME).a $(MKL_STATIC_LIBS) ; do \
@@ -143,23 +145,24 @@ else
 	cat $$_tmp ; \
 	ar -M < $$_tmp || exit 1 ; \
 	rm $$_tmp)
-endif
+endif # HAS_LIBTOOL_STATIC
 	cp $@ $(LIBNAME)-static-dbg.a
 # The self-contained static library is always stripped, regardless
 # of --enable-strip, since otherwise it would become too big.
 	$(STRIP) -S $@
 	$(RANLIB) $@
+
 ifneq ($(MKL_DYNAMIC_LIBS),)
 	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: The following libraries were not available as static libraries and need to be linked dynamically: $(MKL_DYNAMIC_LIBS)$(MKL_CLR_RESET)\n"
-endif
-else
+endif # MKL_DYNAMIC_LIBS
+
+else # MKL_STATIC_LIBS is empty
+_STATIC_FILENAME=$(LIBNAME).a
+$(LIBNAME)-static.a:
 	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: Not creating self-contained static library $@: no static libraries available/enabled$(MKL_CLR_RESET)\n"
-	@printf "$(MKL_YELLOW)         Using standard static library in $(LIBNAME0)-static.pc$(MKL_CLR_RESET)\n"
-endif
-endif
+endif # MKL_STATIC_LIBS
 
-_STATIC_FILENAME=$(LIBNAME)$(if $(MKL_STATIC_LIBS),-static,).a
-
+endif # MKL_NO_SELFCONTAINED_STATIC_LIB
 
 $(LIBFILENAMELINK): $(LIBFILENAME)
 	@printf "$(MKL_YELLOW)Creating $@ symlink$(MKL_CLR_RESET)\n"
