--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
    env: ADDITIONAL_BUILDS="alpine" LINKAGE=std
    before_script:
     - ./configure --install-deps --disable-lz4-ext --prefix="$PWD/dest" --enable-werror --enable-strip
- - name: "Linux clang: +static +alpine-static"
+ - name: "Linux clang: +static +alpine-static -gssapi"
    os: linux
    compiler: clang
    env: ADDITIONAL_BUILDS="alpine-static" LINKAGE=static
@@ -82,13 +82,13 @@ matrix:
     - sudo apt install -y gdb
     - ./configure --enable-devel --disable-lz4-ext --prefix="$PWD/dest"
     - ./packaging/tools/rdutcoverage.sh
- - name: "Linux GCC arm64 --disable-gssapi"
+ - name: "Linux GCC arm64: +static -gssapi"
    os: linux
    arch: arm64
    compiler: gcc
    env: LINKAGE=std
    before_script:
-    - ./configure --CFLAGS="-std=c99" --CXXFLAGS="-std=c++98" --disable-gssapi --install-deps --disable-lz4-ext --prefix="$PWD/dest" --enable-strip
+    - ./configure --CFLAGS="-std=c99" --CXXFLAGS="-std=c++98" --disable-gssapi --install-deps --enable-static --disable-lz4-ext --prefix="$PWD/dest" --enable-strip
  - name: "Linux GCC s390x: +devel"
    os: linux
    arch: s390x
