Travis: upgrade openssl1.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,7 @@ matrix:
  - name: "Linux GCC arm64: +static -gssapi"
    os: linux
    arch: arm64
+   dist: bionic
    compiler: gcc
    env: LINKAGE=std
    before_script:
@@ -96,7 +97,6 @@ matrix:
    compiler: gcc
    env: NO_ARTIFACTS=y
    before_script:
-    - sudo apt update
     - sudo apt install -y gdb
     - ./configure --enable-devel --disable-lz4-ext --prefix="$PWD/dest"
 
@@ -104,6 +104,9 @@ install:
  - ccache -s || echo "CCache is not available."
  - rm -rf artifacts dest
  - mkdir dest artifacts
+ - if [[ $TRAVIS_OS_NAME == "linux" ]]; then sudo apt update || true; fi
+ - if [[ $TRAVIS_DIST == "trusty" || $TRAVIS_DIST == "xenial" ]]; then sudo apt-get install -y libssl1.0.0 libssl-dev ; fi
+ - if [[ $TRAVIS_DIST == "bionic" || $TRAVIS_DIST == "focal" ]]; then sudo apt-get install -y libssl1.1 libssl-dev ; fi
 
 before_cache:
  - if [[ $TRAVIS_OS_NAME == windows ]]; then $msys2 pacman --sync --clean --noconfirm ; fi
