--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -177,6 +177,7 @@ endif(WIN32)
 # * HAVE_STRNDUP
 # * HAVE_PTHREAD_SETNAME_GNU
 # * HAVE_PTHREAD_SETNAME_DARWIN
+# * HAVE_PTHREAD_SETNAME_FREEBSD
 # * WITH_C11THREADS
 # * WITH_CRC32C_HW
 # * LINK_ATOMIC
@@ -205,6 +206,7 @@ set(GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")
 # * HAVE_STRNDUP
 # * HAVE_PTHREAD_SETNAME_GNU
 # * HAVE_PTHREAD_SETNAME_DARWIN
+# * HAVE_PTHREAD_SETNAME_FREEBSD
 list(APPEND BUILT_WITH "SNAPPY")
 list(APPEND BUILT_WITH "SOCKEM")
 string(REPLACE ";" " " BUILT_WITH "${BUILT_WITH}")
