--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,9 @@ else()
 endif()
 option(WITH_SASL "With SASL" ${with_sasl_default})
 if(WITH_SASL)
+  if(SASL_FOUND)
+    link_directories(${SASL_LIBRARY_DIRS})
+  endif()
   if(WITH_SSL)
     set(WITH_SASL_SCRAM ON)
     set(WITH_SASL_OAUTHBEARER ON)
