--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -114,6 +114,7 @@ set(
     0120-asymmetric_subscription.c
     0121-clusterid.c
     0123-connections_max_idle.c
+    0124-openssl_invalid_engine.c
     8000-idle.cpp
     test.c
     testcpp.cpp
