--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="..\..\tests\0120-asymmetric_subscription.c" />
     <ClCompile Include="..\..\tests\0121-clusterid.c" />
     <ClCompile Include="..\..\tests\0123-connections_max_idle.c" />
+    <ClCompile Include="..\..\tests\0124-openssl_invalid_engine.c" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
