--- a/examples/Makefile
+++ b/examples/Makefile
@@ -2,7 +2,7 @@ EXAMPLES ?= rdkafka_example rdkafka_performance rdkafka_example_cpp \
 	rdkafka_complex_consumer_example rdkafka_complex_consumer_example_cpp \
 	kafkatest_verifiable_client \
 	producer consumer idempotent_producer transactions \
-	delete_records
+	delete_records \
 	openssl_engine_example_cpp
 
 all: $(EXAMPLES)
